Fixed scrollbar in the sidepanel.

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -27,10 +27,8 @@ html, body {
   position: absolute;
   left: 0px;
   top: 0px;
-  width: 300px;
+  width: 340px;
   background: #fff;
-  /*border-right: 1px solid #ddd;*/
-  padding: 70px 20px 0px 20px;
   height: 100%;
   overflow: hidden;
 }
@@ -57,3 +55,13 @@ html, body {
   font-weight: bold;
 }
 
+#sidebar_inner {
+  position: absolute;
+  top: 60px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  border-right: 1px solid #ddd;
+  overflow: auto;
+  padding: 0 20px;
+}
